WCAG color-contrast issues

--- a/ckan/public/base/css/green.css
+++ b/ckan/public/base/css/green.css
@@ -5486,7 +5486,7 @@ a.tag:hover {
 }
 .pill {
   display: inline-block;
-  background-color: #6f8890;
+  background-color: #007eac;
   color: #ffffff;
   padding: 2px 10px 1px 10px;
   margin-right: 5px;
