--- a/ckan/public/base/css/main.css
+++ b/ckan/public/base/css/main.css
@@ -5418,7 +5418,7 @@ a.tag:hover {
 }
 .pill {
   display: inline-block;
-  background-color: #6f8890;
+  background-color: #007eac;
   color: #ffffff;
   padding: 2px 10px 1px 10px;
   margin-right: 5px;
@@ -5976,12 +5976,12 @@ a.tag:hover {
 .nav-aside li.active a {
   position: relative;
   color: #ffffff;
-  background-color: #8ca0a6;
+  background-color: #115a19;
 }
 .nav-item.active > a:hover,
 .nav-aside li.active a:hover {
   color: #ffffff;
-  background-color: #8ca0a6;
+  background-color: #115a19;
 }
 @media (min-width: 768px) {
   .nav-item.active > a:before,
@@ -6213,7 +6213,7 @@ textarea {
   height: 41px;
 }
 .control-required {
-  color: #bd7578;
+  color: #4f4344;
 }
 .form-actions .control-required-message {
   float: left;
