--- a/ckan/public/base/less/forms.less
+++ b/ckan/public/base/less/forms.less
@@ -89,7 +89,7 @@ textarea {
 }
 
 .control-required {
-  color: @errorBorder;
+  color: #4f4344;
 }
 
 .form-actions .control-required-message {
